--- a/支付等待弹窗.html
+++ b/支付等待弹窗.html
@@ -25,157 +25,161 @@
     <div id="base" class="">
 
       <!-- Unnamed (组 合) -->
-      <div id="u105" class="ax_default" data-left="40" data-top="37" data-width="320" data-height="543">
+      <div id="u111" class="ax_default" data-left="40" data-top="37" data-width="320" data-height="543">
 
         <!-- Unnamed (图片) -->
-        <div id="u106" class="ax_default _图片">
-          <img id="u106_img" class="img " src="images/历史报告/u35.png"/>
+        <div id="u112" class="ax_default _图片">
+          <img id="u112_img" class="img " src="images/历史报告/u37.png"/>
         </div>
 
         <!-- Unnamed (垂直线) -->
-        <div id="u107" class="ax_default line">
-          <img id="u107_img" class="img " src="images/历史报告/u36.png"/>
+        <div id="u113" class="ax_default line">
+          <img id="u113_img" class="img " src="images/历史报告/u38.png"/>
         </div>
 
         <!-- Unnamed (水平线) -->
-        <div id="u108" class="ax_default line">
-          <img id="u108_img" class="img " src="images/历史报告/u37.png"/>
+        <div id="u114" class="ax_default line">
+          <img id="u114_img" class="img " src="images/历史报告/u39.png"/>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u109" class="ax_default box_2">
-          <div id="u109_div" class=""></div>
+        <div id="u115" class="ax_default box_2">
+          <div id="u115_div" class=""></div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u110" class="ax_default label">
-          <div id="u110_div" class=""></div>
-          <div id="u110_text" class="text ">
+        <div id="u116" class="ax_default label">
+          <div id="u116_div" class=""></div>
+          <div id="u116_text" class="text ">
             <p><span>支付页</span></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u111" class="ax_default label">
-          <div id="u111_div" class=""></div>
-          <div id="u111_text" class="text ">
+        <div id="u117" class="ax_default label">
+          <div id="u117_div" class=""></div>
+          <div id="u117_text" class="text ">
             <p><span>订单详情：网贷黑名单报告解读</span></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u112" class="ax_default label">
-          <div id="u112_div" class=""></div>
-          <div id="u112_text" class="text ">
+        <div id="u118" class="ax_default label">
+          <div id="u118_div" class=""></div>
+          <div id="u118_text" class="text ">
             <p><span>订单金额：19.9元</span></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u113" class="ax_default box_3">
-          <div id="u113_div" class=""></div>
+        <div id="u119" class="ax_default box_3">
+          <div id="u119_div" class=""></div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u114" class="ax_default label">
-          <div id="u114_div" class=""></div>
-          <div id="u114_text" class="text ">
+        <div id="u120" class="ax_default label">
+          <div id="u120_div" class=""></div>
+          <div id="u120_text" class="text ">
             <p><span>支付方式</span></p>
           </div>
         </div>
 
         <!-- Unnamed (图片) -->
-        <div id="u115" class="ax_default _图片">
-          <img id="u115_img" class="img " src="images/支付页面/u93.png"/>
+        <div id="u121" class="ax_default _图片">
+          <img id="u121_img" class="img " src="images/支付页面/u97.png"/>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u116" class="ax_default box_3">
-          <div id="u116_div" class=""></div>
+        <div id="u122" class="ax_default box_3">
+          <div id="u122_div" class=""></div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u117" class="ax_default primary_button">
-          <div id="u117_div" class=""></div>
-          <div id="u117_text" class="text ">
+        <div id="u123" class="ax_default primary_button">
+          <div id="u123_div" class=""></div>
+          <div id="u123_text" class="text ">
             <p><span style="font-family:'PingFangSC-Regular', 'PingFang SC';">微信支付：1</span><span style="font-family:'ArialMT', 'Arial';">9.9</span><span style="font-family:'PingFangSC-Regular', 'PingFang SC';">元</span></p>
           </div>
         </div>
 
         <!-- Unnamed (垂直线) -->
-        <div id="u118" class="ax_default line">
-          <img id="u118_img" class="img " src="images/历史报告/u40.png"/>
+        <div id="u124" class="ax_default line">
+          <img id="u124_img" class="img " src="images/历史报告/u42.png"/>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u119" class="ax_default label">
-          <div id="u119_div" class=""></div>
-          <div id="u119_text" class="text ">
+        <div id="u125" class="ax_default label">
+          <div id="u125_div" class=""></div>
+          <div id="u125_text" class="text ">
             <p><span>订单号：201908061253461233</span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u120" class="ax_default box_2">
-        <div id="u120_div" class=""></div>
+      <div id="u126" class="ax_default box_2">
+        <div id="u126_div" class=""></div>
       </div>
 
       <!-- Unnamed (组 合) -->
-      <div id="u121" class="ax_default" data-left="41" data-top="261" data-width="319" data-height="49">
-
-        <!-- Unnamed (矩形) -->
-        <div id="u122" class="ax_default box_2">
-          <div id="u122_div" class=""></div>
-        </div>
-
-        <!-- Unnamed (图片) -->
-        <div id="u123" class="ax_default _图片">
-          <img id="u123_img" class="img " src="images/支付页面/u102.png"/>
-        </div>
-
-        <!-- Unnamed (矩形) -->
-        <div id="u124" class="ax_default label">
-          <div id="u124_div" class=""></div>
-          <div id="u124_text" class="text ">
-            <p><span>微信支付</span></p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Unnamed (垂直线) -->
-      <div id="u125" class="ax_default line">
-        <img id="u125_img" class="img " src="images/历史报告/u40.png"/>
-      </div>
-
-      <!-- Unnamed (组 合) -->
-      <div id="u126" class="ax_default" data-left="40" data-top="37" data-width="319" data-height="543">
-
-        <!-- Unnamed (矩形) -->
-        <div id="u127" class="ax_default box_3">
-          <div id="u127_div" class=""></div>
-        </div>
+      <div id="u127" class="ax_default" data-left="41" data-top="261" data-width="319" data-height="49">
 
         <!-- Unnamed (矩形) -->
         <div id="u128" class="ax_default box_2">
           <div id="u128_div" class=""></div>
         </div>
 
-        <!-- Unnamed (矩形) -->
-        <div id="u129" class="ax_default label">
-          <div id="u129_div" class=""></div>
-          <div id="u129_text" class="text ">
-            <p><span>等待支付结果中...</span></p>
-          </div>
+        <!-- Unnamed (图片) -->
+        <div id="u129" class="ax_default _图片">
+          <img id="u129_img" class="img " src="images/支付页面/u106.png"/>
         </div>
 
         <!-- Unnamed (矩形) -->
         <div id="u130" class="ax_default label">
           <div id="u130_div" class=""></div>
           <div id="u130_text" class="text ">
+            <p><span>微信支付</span></p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Unnamed (垂直线) -->
+      <div id="u131" class="ax_default line">
+        <img id="u131_img" class="img " src="images/历史报告/u42.png"/>
+      </div>
+
+      <!-- Unnamed (组 合) -->
+      <div id="u132" class="ax_default" data-left="40" data-top="37" data-width="319" data-height="543">
+
+        <!-- Unnamed (矩形) -->
+        <div id="u133" class="ax_default box_3">
+          <div id="u133_div" class=""></div>
+        </div>
+
+        <!-- Unnamed (矩形) -->
+        <div id="u134" class="ax_default box_2">
+          <div id="u134_div" class=""></div>
+        </div>
+
+        <!-- Unnamed (矩形) -->
+        <div id="u135" class="ax_default label">
+          <div id="u135_div" class=""></div>
+          <div id="u135_text" class="text ">
+            <p><span>等待支付结果中...</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (矩形) -->
+        <div id="u136" class="ax_default label">
+          <div id="u136_div" class=""></div>
+          <div id="u136_text" class="text ">
             <p><span>我知道了</span></p>
           </div>
         </div>
+      </div>
+
+      <!-- Unnamed (热区) -->
+      <div id="u137" class="ax_default">
       </div>
     </div>
   </body>
