--- a/查询页面.html
+++ b/查询页面.html
@@ -114,6 +114,14 @@
       <div id="u33" class="ax_default line">
         <img id="u33_img" class="img " src="images/查询页面/u33.png"/>
       </div>
+
+      <!-- Unnamed (热区) -->
+      <div id="u34" class="ax_default">
+      </div>
+
+      <!-- Unnamed (热区) -->
+      <div id="u35" class="ax_default">
+      </div>
     </div>
   </body>
 </html>
