--- a/原型版本管理.html
+++ b/原型版本管理.html
@@ -159,7 +159,7 @@
         <div id="u17" class="ax_default table_cell">
           <img id="u17_img" class="img " src="images/原型版本管理/u17.png"/>
           <div id="u17_text" class="text ">
-            <p><span>20190409</span></p>
+            <p><span>20190429</span></p>
           </div>
         </div>
 
@@ -175,7 +175,7 @@
         <div id="u19" class="ax_default table_cell">
           <img id="u19_img" class="img " src="images/原型版本管理/u19.png"/>
           <div id="u19_text" class="text ">
-            <p><span>1.去除“历史报告”入口</span></p>
+            <p><span>1.去除“历史报告”入口</span></p><p><span>2.更换成h5支付</span></p>
           </div>
         </div>
 
