--- a/支付页面.html
+++ b/支付页面.html
@@ -120,7 +120,7 @@
       <div id="u53" class="ax_default label">
         <div id="u53_div" class=""></div>
         <div id="u53_text" class="text ">
-          <p><span>说明：</span></p><p><span><br></span></p><p><span>1.订单金额为19.9元；</span></p><p><span><br></span></p><p><span>2.若未安装微信，点击按钮时提示“请先安装微信”；</span></p><p><span><br></span></p><p><span>3.订单详情中的“XXXX报告解读”更改为&quot;XXXX报告&quot;，如“网贷黑名单报告解读”更改为“网贷黑名单报告”</span></p><p><span><br></span></p>
+          <p><span>说明：</span></p><p><span><br></span></p><p><span>1.跳转至浏览器中打开支付页；</span></p><p><span><br></span></p><p><span>2.订单金额为19.9元；</span></p><p><span><br></span></p><p><span>3.订单详情中的“XXXX报告解读”更改为&quot;XXXX报告&quot;，如“网贷黑名单报告解读”更改为“网贷黑名单报告”；</span></p><p><span><br></span></p><p><span>4.点击“微信支付：19.9元”按钮，弹出确认弹窗；</span></p><p><span><br></span></p><p><span>5.点击“取消”，返回至支付页面；点击“打开”，进入微信支付页面；</span></p><p><span><br></span></p><p><span>6.在支付页点击返回，返回至h5查询页面。</span></p><p><span><br></span></p>
         </div>
       </div>
 
@@ -162,6 +162,33 @@
 
       <!-- Unnamed (热区) -->
       <div id="u61" class="ax_default">
+      </div>
+
+      <!-- Unnamed (图片) -->
+      <div id="u62" class="ax_default _图片">
+        <img id="u62_img" class="img " src="images/支付页面/u62.png"/>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u63" class="ax_default box_3">
+        <div id="u63_div" class=""></div>
+      </div>
+
+      <!-- Unnamed (组 合) -->
+      <div id="u64" class="ax_default" data-left="122" data-top="497" data-width="156" data-height="17">
+
+        <!-- Unnamed (矩形) -->
+        <div id="u65" class="ax_default label">
+          <div id="u65_div" class=""></div>
+          <div id="u65_text" class="text ">
+            <p><span>支付剩余时间：00:14:34</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (形状) -->
+        <div id="u66" class="ax_default icon">
+          <img id="u66_img" class="img " src="images/支付页面/u66.png"/>
+        </div>
       </div>
     </div>
   </body>
