--- a/确认支付界面.html
+++ b/确认支付界面.html
@@ -25,144 +25,144 @@
     <div id="base" class="">
 
       <!-- Unnamed (图片) -->
-      <div id="u89" class="ax_default _图片">
-        <img id="u89_img" class="img " src="images/确认支付界面/u89.png"/>
+      <div id="u67" class="ax_default _图片">
+        <img id="u67_img" class="img " src="images/确认支付界面/u67.png"/>
       </div>
 
       <!-- Unnamed (图片) -->
-      <div id="u90" class="ax_default _图片">
-        <img id="u90_img" class="img " src="images/确认支付界面/u90.png"/>
+      <div id="u68" class="ax_default _图片">
+        <img id="u68_img" class="img " src="images/确认支付界面/u68.png"/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u91" class="ax_default box_2">
-        <div id="u91_div" class=""></div>
+      <div id="u69" class="ax_default box_2">
+        <div id="u69_div" class=""></div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u92" class="ax_default label">
-        <div id="u92_div" class=""></div>
-        <div id="u92_text" class="text ">
+      <div id="u70" class="ax_default label">
+        <div id="u70_div" class=""></div>
+        <div id="u70_text" class="text ">
           <p><span>19.9</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u93" class="ax_default box_2">
-        <div id="u93_div" class=""></div>
+      <div id="u71" class="ax_default box_2">
+        <div id="u71_div" class=""></div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u94" class="ax_default label">
-        <div id="u94_div" class=""></div>
-        <div id="u94_text" class="text ">
+      <div id="u72" class="ax_default label">
+        <div id="u72_div" class=""></div>
+        <div id="u72_text" class="text ">
           <p><span>19.9</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u95" class="ax_default box_2">
-        <div id="u95_div" class=""></div>
+      <div id="u73" class="ax_default box_2">
+        <div id="u73_div" class=""></div>
       </div>
 
       <!-- Unnamed (垂直线) -->
-      <div id="u96" class="ax_default line">
-        <img id="u96_img" class="img " src="images/确认支付界面/u96.png"/>
+      <div id="u74" class="ax_default line">
+        <img id="u74_img" class="img " src="images/确认支付界面/u74.png"/>
       </div>
 
       <!-- Unnamed (垂直线) -->
-      <div id="u97" class="ax_default line">
-        <img id="u97_img" class="img " src="images/确认支付界面/u96.png"/>
+      <div id="u75" class="ax_default line">
+        <img id="u75_img" class="img " src="images/确认支付界面/u74.png"/>
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u98" class="ax_default line">
-        <img id="u98_img" class="img " src="images/确认支付界面/u98.png"/>
+      <div id="u76" class="ax_default line">
+        <img id="u76_img" class="img " src="images/确认支付界面/u76.png"/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u99" class="ax_default label">
-        <div id="u99_div" class=""></div>
-        <div id="u99_text" class="text ">
+      <div id="u77" class="ax_default label">
+        <div id="u77_div" class=""></div>
+        <div id="u77_text" class="text ">
           <p><span>跳转到微信支付</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u100" class="ax_default label">
-        <div id="u100_div" class=""></div>
-        <div id="u100_text" class="text ">
+      <div id="u78" class="ax_default label">
+        <div id="u78_div" class=""></div>
+        <div id="u78_text" class="text ">
           <p><span>用户确认支付</span></p>
         </div>
       </div>
 
       <!-- Unnamed (图片) -->
-      <div id="u101" class="ax_default _图片">
-        <img id="u101_img" class="img " src="images/确认支付界面/u101.png"/>
+      <div id="u79" class="ax_default _图片">
+        <img id="u79_img" class="img " src="images/确认支付界面/u79.png"/>
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u102" class="ax_default line">
-        <img id="u102_img" class="img " src="images/确认支付界面/u98.png"/>
+      <div id="u80" class="ax_default line">
+        <img id="u80_img" class="img " src="images/确认支付界面/u76.png"/>
       </div>
 
       <!-- Unnamed (垂直线) -->
-      <div id="u103" class="ax_default line">
-        <img id="u103_img" class="img " src="images/确认支付界面/u96.png"/>
+      <div id="u81" class="ax_default line">
+        <img id="u81_img" class="img " src="images/确认支付界面/u74.png"/>
       </div>
 
       <!-- Unnamed (垂直线) -->
-      <div id="u104" class="ax_default line">
-        <img id="u104_img" class="img " src="images/确认支付界面/u96.png"/>
+      <div id="u82" class="ax_default line">
+        <img id="u82_img" class="img " src="images/确认支付界面/u74.png"/>
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u105" class="ax_default line">
-        <img id="u105_img" class="img " src="images/确认支付界面/u98.png"/>
+      <div id="u83" class="ax_default line">
+        <img id="u83_img" class="img " src="images/确认支付界面/u76.png"/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u106" class="ax_default label">
-        <div id="u106_div" class=""></div>
-        <div id="u106_text" class="text ">
+      <div id="u84" class="ax_default label">
+        <div id="u84_div" class=""></div>
+        <div id="u84_text" class="text ">
           <p><span>支付成功提示页面</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u107" class="ax_default label">
-        <div id="u107_div" class=""></div>
-        <div id="u107_text" class="text ">
-          <p><span>说明：</span></p><p><span><br></span></p><p><span>1.支付完后，返回至支付等待弹窗；</span></p><p><span><br></span></p><p><span><br></span></p><p><span><br></span></p>
+      <div id="u85" class="ax_default label">
+        <div id="u85_div" class=""></div>
+        <div id="u85_text" class="text ">
+          <p><span>说明：</span></p><p><span><br></span></p><p><span>1.支付完后，进入报告页面；</span></p><p><span><br></span></p><p><span><br></span></p><p><span><br></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u108" class="ax_default box_2">
-        <div id="u108_div" class=""></div>
+      <div id="u86" class="ax_default box_2">
+        <div id="u86_div" class=""></div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u109" class="ax_default label">
-        <div id="u109_div" class=""></div>
-        <div id="u109_text" class="text ">
+      <div id="u87" class="ax_default label">
+        <div id="u87_div" class=""></div>
+        <div id="u87_text" class="text ">
           <p><span>19.9</span></p>
         </div>
       </div>
 
       <!-- Unnamed (垂直线) -->
-      <div id="u110" class="ax_default line">
-        <img id="u110_img" class="img " src="images/确认支付界面/u96.png"/>
+      <div id="u88" class="ax_default line">
+        <img id="u88_img" class="img " src="images/确认支付界面/u74.png"/>
       </div>
 
       <!-- Unnamed (垂直线) -->
-      <div id="u111" class="ax_default line">
-        <img id="u111_img" class="img " src="images/确认支付界面/u96.png"/>
+      <div id="u89" class="ax_default line">
+        <img id="u89_img" class="img " src="images/确认支付界面/u74.png"/>
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u112" class="ax_default line">
-        <img id="u112_img" class="img " src="images/确认支付界面/u112.png"/>
+      <div id="u90" class="ax_default line">
+        <img id="u90_img" class="img " src="images/确认支付界面/u90.png"/>
       </div>
     </div>
   </body>
